[project]
name = "pybreaker"
version = "0.1.0"
description = "Python Circuit Breaker example with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "aiobreaker>=1.2.0",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"