[project]
name = "retry"
version = "0.1.0"
description = "Python Retry pattern example with FastAPI and Tenacity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.0",
    "tenacity>=9.0.0",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"